# JSBridge

./: .gitignore  CMakeLists.txt  main.cpp
resources/: rabbit.txt
src/: SafeJSString.h  block_queue.h  engine.cpp  engine.h  main.cpp  methods.cpp  methods.h  utils.cpp  utils.h
typescript/: jsbridge.ts  lib.ts  main.ts  package.json
